--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
           <li class="nav-item">
             <a href="#questions" class="nav-link">Questions</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a href="#instructors" class="nav-link">Instructors</a>
-          </li>
+          </li> -->
         </ul>
       </div>
     </div>
@@ -47,7 +47,7 @@
                 <div>
                     <h1>Become A <span class="text-warning">PhantomSkater</span></h1>
                 
-                    <p class="lead my-4">We focus on developing youth/adults the basics of speed skating and technique. With focus on positvie Virtues to ensure Champion Spirits. 
+                    <p class="lead my-4">We focus on developing youth/adults the basics of speed skating and technique. With focus on positive Virtues to ensure Champion Spirits rise to the challenges of tomorrows competitions. If you enjoy skating, mentoring or cheering on your favorites; we have a place for <span class="text-warning">YOU!</span> 
                     </p>
                     <button 
                     class="btn btn-warning btn-lg" 
@@ -97,7 +97,7 @@
                            Virtual
                        </h3>
                        <p class="card-text">
-                           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum debitis facere voluptas aliquam, ullam magnam.
+                           Allow us to guide you through practices at home through our facebook motivation. Getting in the flow of off-track exercises.
                        </p>
                        <a href="#" class="btn btn-warning">Read more</a>
                     </div>
@@ -112,7 +112,7 @@
                             Hybrid
                         </h3>
                         <p class="card-text">
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum debitis facere voluptas aliquam, ullam magnam.
+                            Following along some of the greatest athletes exercises some even have their own training regiments, we may be able to point you in the direction of.
                         </p>
                         <a href="#" class="btn btn-dark">Read more</a>
                      </div>
@@ -127,7 +127,7 @@
                         In-Person
                     </h3>
                     <p class="card-text">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum debitis facere voluptas aliquam, ullam magnam.
+                        Come to practice to "Lace up, train and have fun" while working out on skates! We practice to be great, as well as stay in shape and motivate.
                     </p>
                     <a href="#" class="btn btn-warning">Read more</a>
                     </div>
@@ -147,14 +147,10 @@
             <div class="col-md p-5">
               <h2>Learn The Fundamentals</h2>
               <p class="lead">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Similique deleniti possimus magnam corporis ratione facere!
+                Allow our mentors with passion for the sport and your goals in mind to help you. Guiding <span class="text-warning">you</span> is what pushes us to do and be better in what we do! 
               </p>
               <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque
-                reiciendis eius autem eveniet mollitia, at asperiores suscipit
-                quae similique laboriosam iste minus placeat odit velit quos,
-                nulla architecto amet voluptates?
+                Skating alongside some; that have more years combined than how long google has been a company! We strive to help you meet your goals, whether that be pushed for an extra lap or another second off your lap-time. We will face it together and make it together! When <span class="text-warning">you</span> win; <span class="text-warning">we</span> win with <span class="text-warning">you</span>!
               </p>
               <a href="#" class="btn btn-warning mt-3">
                 <i class="bi bi-chevron-right"></i> Read More
@@ -171,14 +167,10 @@
             <div class="col-md p-5">
               <h2>Learn Speed</h2>
               <p class="lead">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Similique deleniti possimus magnam corporis ratione facere!
+                Want to push further? Do you have speed in your skates? Join us in competing in regional &national competitions! We travel to compete in some of the nations toughest competitions and would love to see <span class="text-warning">you</span> rock the podiums in one of our uniforms!
               </p>
               <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque
-                reiciendis eius autem eveniet mollitia, at asperiores suscipit
-                quae similique laboriosam iste minus placeat odit velit quos,
-                nulla architecto amet voluptates?
+                Let us help you strive to some of your greatest, fastest moments; that will take the utmost focus to make split second decisions to get you ahead in your fierce competition. We are here to help and cheer you along the way!
               </p>
               <a href="#" class="btn btn-warning mt-3">
                 <i class="bi bi-chevron-right"></i> Read More
