--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 </li>
                 <li class="list-group-item">
                   <span class="fw-bold">Student Email:</span>
-                  student@enroll@PhantomRacing.test.test
+                  student@enroll@PhantomRacing.test
                 </li>
               </ul>
             </div>
