--- a/index.html
+++ b/index.html
@@ -260,17 +260,17 @@
                 <li class="list-group-item">
                   <span class="fw-bold">Enrollment Phone:</span> (937) 610-2827
                 </li>
-                <li class="list-group-item">
+                <!-- <li class="list-group-item">
                   <span class="fw-bold">Student Phone:</span> (333) 333-3333
-                </li>
+                </li> -->
                 <li class="list-group-item">
                   <span class="fw-bold">Enrollment Email:</span> (555)
                   enroll@PhantomRacing.test
                 </li>
-                <li class="list-group-item">
+                <!-- <li class="list-group-item">
                   <span class="fw-bold">Student Email:</span>
                   student@enroll@PhantomRacing.test
-                </li>
+                </li> -->
               </ul>
             </div>
             <div class="col-md bg-secondary">
