update.picture.small.edits

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
                     class="btn btn-warning btn-lg" 
                     data-bs-toggle="modal" 
                     data-bs-target="#enroll"
-                    >Start Enrollment
+                    >Get Information
                     </button>
                 </div>
               <div>  
-                <img class="img-fluid w-100 d-none d-sm-block" src="team-pic.jpg" alt="phantom-logo">
+                <img class="img-fluid w-100 d-none d-sm-block" src="hi-res-team.JPEG" alt="phantom-logo">
               </div>
             </div>
         </div>
