added.link.functionality

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                        <p class="card-text">
                            Allow us to guide you through practices at home through our facebook motivation. Getting in the flow of off-track exercises.
                        </p>
-                       <a href="https://www.facebook.com/groups/phantomracing" class="btn btn-warning">Read more</a>
+                       <a target="_blank" href="https://www.facebook.com/groups/phantomracing" class="btn btn-warning">Read more</a>
                     </div>
                 </div>
     <!-- 2nd box -->
@@ -114,7 +114,7 @@
                         <p class="card-text">
                             Following along some of the greatest athletes exercises some even have their own training regiments, we may be able to point you in the direction of.
                         </p>
-                        <a href="https://www.facebook.com/groups/phantomracing" class="btn btn-dark">Read more</a>
+                        <a target="_blank" href="https://www.facebook.com/groups/phantomracing" class="btn btn-dark">Read more</a>
                      </div>
                 </div>
     <!-- 3rd box -->
@@ -152,7 +152,7 @@
               <p>
                 Skating alongside some; that have more years combined than how long google has been a company! We strive to help you meet your goals, whether that be pushed for an extra lap or another second off your lap-time. We will face it together and make it together! When <span class="text-warning">you</span> win; <span class="text-warning">we</span> win with <span class="text-warning">you</span>!
               </p>
-              <a href="fundamentals.html" class="btn btn-warning mt-3">
+              <a target="_self" href="./fundamentals.html" class="btn btn-warning mt-3">
                 <i class="bi bi-chevron-right"></i> Read More
               </a>
             </div>
@@ -172,7 +172,7 @@
               <p>
                 Let us help you strive to some of your greatest, fastest moments; that will take the utmost focus to make split second decisions to get you ahead in your fierce competition. We are here to help and cheer you along the way!
               </p>
-              <a href="#" class="btn btn-warning mt-3">
+              <a target="_self" href="./fundamentals.html" class="btn btn-warning mt-3">
                 <i class="bi bi-chevron-right"></i> Read More
               </a>
             </div>
@@ -189,7 +189,7 @@
           <div class="container">
               <h2 class="text-center mb-4">
                 Frequently Asked Questions
-                <a href="faq.html" class="btn btn-warning mt-3 m-3">
+                <a target="_blank" href="./faq.html" class="btn btn-warning mt-3 m-3">
                   <i class="bi bi-chevron-right"></i> Go To FAQ
                 </a>
               </h2>
