--- a/fundamentals.html
+++ b/fundamentals.html
@@ -31,7 +31,7 @@
           <div class="collapse navbar-collapse" id="navmenu">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a href="#index.html" class="nav-link">Home</a>
+                    <a target="_self" href="index.html" class="nav-link">Home</a>
                   </li>
               <li class="nav-item">
                 <a href="#the-basics" class="nav-link">The Basics</a>
