--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
           <div class="container">
               <h2 class="text-center mb-4">
                 Frequently Asked Questions
-                <a target="_blank" href="./faq.html" class="btn btn-warning mt-3 m-3">
+                <a target="_self" href="./faq.html" class="btn btn-warning mt-3 m-3">
                   <i class="bi bi-chevron-right"></i> Go To FAQ
                 </a>
               </h2>
