--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <div class="col-md">
                     <div class="card bg-secondary text-light">
                         <div class="h1 mb-3"> 
-                         <i class="bi bi-person-square"></i>
+                         <i class="bi bi-people"></i>
                         </div>
                         <h3 class="card-title mb-3">
                             Hybrid
@@ -114,14 +114,14 @@
                         <p class="card-text">
                             Following along some of the greatest athletes exercises some even have their own training regiments, we may be able to point you in the direction of.
                         </p>
-                        <a target="_blank" href="https://www.facebook.com/groups/phantomracing" class="btn btn-dark">Read more</a>
+                        <a target="_blank" href="https://www.youtube.com/c/Inlinespeedskater" class="btn btn-dark">Read more</a>
                      </div>
                 </div>
     <!-- 3rd box -->
                 <div class="col-md">
                     <div class="card bg-dark text-light">
                     <div class="h1 mb-3"> 
-                        <i class="bi bi-people"></i>
+                        <i class="bi bi-person-square"></i>
                     </div>
                     <h3 class="card-title mb-3">
                         In-Person
