--- a/fundamentals.html
+++ b/fundamentals.html
@@ -17,7 +17,7 @@
 <!-- NavBar -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
         <div class="container">
-          <a href="#" class="navbar-brand text-warning">Phantom Racing</a>
+          <a target="_self" href="./index.html" class="navbar-brand text-warning">Phantom Racing</a>
     
           <button
             class="navbar-toggler"
