small adds and changes

--- a/fundamentals.html
+++ b/fundamentals.html
@@ -72,8 +72,61 @@
                 These skills take practice, in which we practice regularly in our practices and exercises. Perfecting these techniques sometimes can be tricky, however our mentors are here to help. Helping you build your Balance, Core Strength and Power to execute these skills is priority #1 on our track for <span class="text-warning">you</span> to get skating ready.
                 
               </p>
-              <a href="#" class="btn btn-warning mt-3">
+              <a href="#obstacles" class="btn btn-warning mt-3">
                 <i class="bi bi-chevron-right"></i> Next
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+<!-- Container -->
+      <section class="bg-warning text-dark p-5">
+        <div class="container">
+            <div class="d-md-flex justify-content-between align-items-center">
+                <h3 class="mb-3 mb-md-0">Sign up For Newsletter</h3>
+
+                <div class="input-group news-input">
+                    <input type="text" class="form-control" placeholder="Enter Email" 
+                    >
+
+                    <button class="btn btn-dark btn-lg" type="button">
+                        
+                        Button</button>
+                  </div>
+
+            </div>
+        </div>
+    </section>
+
+
+<!-- 2nd section -->
+      <section class="bg-dark p-5 text-light" id="obstacles">
+        <div class="container bg-dark">
+          <div class="row align-items-center justify-content-between">
+            <div class="col-md">
+              <iframe width="800" height="480" src="https://www.youtube.com/embed/nrP--LnzRgs?start=28" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="col-md p-5">
+              <h2 class="text-warning">Going Around Obstacles</h2>
+              <p class="text-light lead">
+                Whether your running with the pack or holding your own in front, we will teach you how to do both. Overcoming these obstacles prove to ourselves that we are climbing in our abilities.
+              </p>
+              <div class="bg-secondary">
+              <ul class="bg-secondary list-group list-group-flush m-3">
+                <li class="bg-secondary text-warning list-group-item">Let's make a plan And stick with it</li>
+                <li class="bg-secondary text-warning list-group-item">Review</li>
+                <li class="bg-secondary text-warning list-group-item">Hit the Drawing board for what we can do better</li>
+                <li class="bg-secondary text-warning list-group-item">Cement the positives</li>
+                <li class="bg-secondary text-warning list-group-item">Refresh</li>
+                <li class="bg-secondary text-warning list-group-item">&Rejoice in completing your goals</li>
+              </ul>
+              </div>
+              <p class="lead">
+                Practice can make perfect, but understanding why we practice and exercises repetitiveness is what truly brings champions to light and allows them to shine inside and out.
+              </p>
+              <a href="./index.html" class="btn btn-warning mt-3">
+                <i class="bi bi-chevron-right"></i>Home
               </a>
             </div>
           </div>
