--- a/index.html
+++ b/index.html
@@ -271,18 +271,17 @@
                   <span class="fw-bold">Student Phone:</span> (333) 333-3333
                 </li> -->
                 <li class="list-group-item">
-                  <span class="fw-bold">Enrollment Email:</span> (555)
-                  enroll@PhantomRacing.test
+                  <span class="fw-bold">Enrollment Email:</span> phantomspeedskating@gmail.com
                 </li>
-                <!-- <li class="list-group-item">
-                  <span class="fw-bold">Student Email:</span>
-                  student@enroll@PhantomRacing.test
-                </li> -->
+                <li class="list-group-item">
+                  <span class="fw-bold">Facebook Group:</span>
+                  <a href="https://www.facebook.com/groups/phantomracing" target="_blank">facebook.com/groups/phantomracing</a>
+                </li>
               </ul>
             </div>
-            <div class="col-md bg-secondary">
+            <!-- <div class="col-md bg-secondary">
                 <p>can include map here (company registration required Robbie wrote this :D)</p>
-              <div id="map"></div>
+              <div id="map"></div> -->
             </div>
           </div>
         </div>
