--- a/faq.html
+++ b/faq.html
@@ -32,10 +32,10 @@
                 <li class="nav-item">
                     <a target="_self" href="index.html" class="nav-link">Home</a>
                   </li>
-              <!-- <li class="nav-item">
+               <li class="nav-item">
                 <a href="#the-basics" class="nav-link">The Basics</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a href="#questions" class="nav-link">Questions</a>
               </li> -->
               <!-- <li class="nav-item">
@@ -45,6 +45,65 @@
           </div>
         </div>
       </nav>
+<!-- v accordion v -->
+<!-- item 1 -->
+              <div class="accordion" id="questions">
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingOne">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#question-one">
+                      Where?
+                    </button>
+                  </h2>
+                  <div id="question-one" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#questions">
+                    <div class="accordion-body">
+                      <strong>Orbit Fun Center -Dayton, Ohio.</strong> <br>5001 Nebraska Ave, Huber Heights, OH 45424
+                    </div>
+                  </div>
+                </div>
+
+<!-- item 2 -->
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-two">
+                      When?
+                    </button>
+                  </h2>
+                  <div id="question-two" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#questions">
+                    <div class="accordion-body">
+                      <strong>Practice Times:</strong>
+                      <br> Sunday: 10AM-12PM
+                      <br> Tuesday: 6PM-8PM
+
+                    </div>
+                  </div>
+                </div>
+<!-- item 3 -->
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#quiestion-three">
+                      What Should I Bring?
+                    </button>
+                  </h2>
+                  <div id="quiestion-three" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#questions">
+                    <div class="accordion-body">
+                      <strong>Equipmet needed:</strong> 
+                      <br> Helmet (we can provide)
+                      <br> Skates (we can provide)
+                      <br> Water (we can provide)
+                      <br>
+                      <br><strong>You Must Bring:</strong> 
+                      <br> Workout Clothes
+                      <br> Friendly Attitude
+                      <br> Positivity
+                    </div>
+                  </div>
+                </div>
+              </div>
+          </div>
+      </section>
+
+<!-- end container -->
+
 
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
