--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
           <li class="nav-item">
             <a href="#questions" class="nav-link">Questions</a>
           </li>
-          <!-- <li class="nav-item">
-            <a href="#instructors" class="nav-link">Instructors</a>
-          </li> -->
+          <li class="nav-item">
+            <a href="./faq.html" class="nav-link">FAQ</a>
+          </li>
         </ul>
       </div>
     </div>
