updated faq layout

--- a/faq.html
+++ b/faq.html
@@ -45,8 +45,42 @@
           </div>
         </div>
       </nav>
+
+<!-- coloumns -->
+  <div class="container p-5">
+    <div class="row">
+        <div class="col-sm">about us/instructors
+          <div class="col-sm"><ul class="list-group">
+            <li class="list-group-item">An item</li>
+            <li class="list-group-item">A second item</li>
+            <li class="list-group-item">A third item</li>
+            <li class="list-group-item">A fourth item</li>
+            <li class="list-group-item">And a fifth one</li>
+          </ul></div>
+        </div> 
+      <div class="col-sm">our sport
+        <div class="col-sm"><ul class="list-group">
+          <li class="list-group-item">An item</li>
+          <li class="list-group-item">A second item</li>
+          <li class="list-group-item">A third item</li>
+          <li class="list-group-item">A fourth item</li>
+          <li class="list-group-item">And a fifth one</li>
+        </ul></div>
+      </div>
+      <div class="col-sm">surrounding organization
+        <div class="col-sm"><ul class="list-group">
+          <li class="list-group-item">An item</li>
+          <li class="list-group-item">A second item</li>
+          <li class="list-group-item">A third item</li>
+          <li class="list-group-item">A fourth item</li>
+          <li class="list-group-item">And a fifth one</li>
+        </ul></div>
+      </div>
+    </div>
+  </div>
 <!-- v accordion v -->
 <!-- item 1 -->
+<div class="container p-5">
               <div class="accordion" id="questions">
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="headingOne">
@@ -60,7 +94,7 @@
                     </div>
                   </div>
                 </div>
-
+</div>
 <!-- item 2 -->
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="headingTwo">
