--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
               <p>
                 Let us help you strive to some of your greatest, fastest moments; that will take the utmost focus to make split second decisions to get you ahead in your fierce competition. We are here to help and cheer you along the way!
               </p>
-              <a target="_self" href="./fundamentals.html" class="btn btn-warning mt-3">
+              <a target="_self" href="./fundamentals.html#obstacles" class="btn btn-warning mt-3">
                 <i class="bi bi-chevron-right"></i> Read More
               </a>
             </div>
