--- a/faq.html
+++ b/faq.html
@@ -33,7 +33,7 @@
                     <a target="_self" href="index.html" class="nav-link">Home</a>
                   </li>
                <li class="nav-item">
-                <a href="#the-basics" class="nav-link">The Basics</a>
+                <a href="./fundamentals.html" class="nav-link">The Basics</a>
               </li>
               <!-- <li class="nav-item">
                 <a href="#questions" class="nav-link">Questions</a>
@@ -49,43 +49,81 @@
 <!-- coloumns -->
   <div class="container p-5">
     <div class="row">
-        <div class="col-sm">about us/instructors
+<!-- About Us -->
+        <div class="col-sm"><h1>About Us</h1>
           <div class="col-sm"><ul class="list-group">
-            <li class="list-group-item">An item</li>
-            <li class="list-group-item">A second item</li>
-            <li class="list-group-item">A third item</li>
-            <li class="list-group-item">A fourth item</li>
-            <li class="list-group-item">And a fifth one</li>
+            <li class="list-group-item"><a href="https://www.orbitfuncenter.com/" target="_blank">Orbit Fun Center Home Page</a></li>
+            <li class="list-group-item"><a href="https://www.facebook.com/groups/phantomracing" target="_blank">Facebook PhantomRacing</a></li>
+            <li class="list-group-item"><a href="https://www.youtube.com/channel/UCjofEQBSjscGYt_BeJLAy2A" target="_blank">Youtube Phantom Racing</a></li>
+            <li class="list-group-item"><a href="https://www.facebook.com/Midwest-Point-Series-169879193571550/" target="_blank">Midwest Point Series Page</a></li>
+            <li class="list-group-item"><a href="https://en.wikipedia.org/wiki/Roller_skating" target="_blank">Roller Skating Wiki</a></li>
           </ul></div>
         </div> 
-      <div class="col-sm">our sport
+<!-- Our Sport -->
+      <div class="col-sm"><h1>Our Sport</h1>
         <div class="col-sm"><ul class="list-group">
-          <li class="list-group-item">An item</li>
-          <li class="list-group-item">A second item</li>
-          <li class="list-group-item">A third item</li>
-          <li class="list-group-item">A fourth item</li>
-          <li class="list-group-item">And a fifth one</li>
+          <li class="list-group-item"><a href="https://www.teamusa.org/usa-roller-sports" target="_blank">USA ROLLER SPORTS</a></li>
+          <li class="list-group-item"><a href="https://en.wikipedia.org/wiki/Inline_speed_skating" target="_blank">Inline speed skating</a></li>
+          <li class="list-group-item"><a href="https://en.wikipedia.org/wiki/Roller_skating" target="_blank">Roller Skating Wiki</a></a></li>
+          <li class="list-group-item"><a href="https://www.youtube.com/c/Inlinespeedskater" target="_blank">Inline Speed Skater Youtube</a></li>
+          <li class="list-group-item"><a href="https://www.inlinespeedskater.com/" target="_blank">Inline Speed Skater Home Page</a></li>
         </ul></div>
       </div>
-      <div class="col-sm">surrounding organization
+<!-- Our Talks -->
+      <div class="col-sm"><h1>Our Talks</h1>
         <div class="col-sm"><ul class="list-group">
-          <li class="list-group-item">An item</li>
-          <li class="list-group-item">A second item</li>
-          <li class="list-group-item">A third item</li>
-          <li class="list-group-item">A fourth item</li>
-          <li class="list-group-item">And a fifth one</li>
+          <li class="list-group-item"><a href="https://www.facebook.com/groups/875019069327187/" target="_blank">INLINE TALK with MR ROGERS</a></li>
+          <li class="list-group-item"><a href="https://www.youtube.com/channel/UCazE2BCji2sJp8AHTgxV5aw" target="_blank">The Jason Husk Show: Managed Chaos</a></li>
+          <li class="list-group-item"><a href="https://www.facebook.com/J.D.HAPPYHOUR" target="_blank">J.D. HAPPY HOUR</a></li>
+          <li class="list-group-item"><a href="https://www.youtube.com/channel/UC_QWj9EYEI2_DozJr1H9y8g" target="_blank">Skating Unfiltered</a></li>
+          <li class="list-group-item"><a href="https://www.youtube.com/c/JoeyMantiaOfficial" target="_blank">Joey Mantia</a></li>
         </ul></div>
       </div>
     </div>
   </div>
-<!-- v accordion v -->
+
+    <!-- Contact & Map -->
+    <section class="p-4">
+      <div class="container">
+        <div class="row g-3">
+          <div class="col-md">
+            <h2 class="text-center mb-2">Contact Info</h2>
+            <ul class="list-group list-group-flush lead">
+              <li class="list-group-item">
+                <span class="fw-bold">Main Location:</span> 5001 Nebraska Ave, Huber Heights, OH 45424
+              </li>
+              <li class="list-group-item">
+                <span class="fw-bold">Enrollment Phone:</span> (937) 610-2827
+              </li>
+              <!-- <li class="list-group-item">
+                <span class="fw-bold">Student Phone:</span> (333) 333-3333
+              </li> -->
+              <li class="list-group-item">
+                <span class="fw-bold">Enrollment Email:</span> phantomspeedskating@gmail.com
+              </li>
+              <li class="list-group-item">
+                <span class="fw-bold">Facebook Group:</span>
+                <a href="https://www.facebook.com/groups/phantomracing" target="_blank">facebook.com/groups/phantomracing</a>
+              </li>
+            </ul>
+          </div>
+          <!-- <div class="col-md bg-secondary">
+              <p>can include map here (company registration required Robbie wrote this :D)</p>
+            <div id="map"></div> -->
+          </div>
+        </div>
+      </div>
+    </section>
+
+<!-- v accordion style questions v -->
 <!-- item 1 -->
-<div class="container p-5">
+    <section class="#questions">
+      <div class="container p-5">
               <div class="accordion" id="questions">
-                <div class="accordion-item">
+                <div class="accordion-item text-center"><h1>Questions</h1>
                   <h2 class="accordion-header" id="headingOne">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#question-one">
-                      Where?
+                      Where do you practice?
                     </button>
                   </h2>
                   <div id="question-one" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#questions">
@@ -94,12 +132,12 @@
                     </div>
                   </div>
                 </div>
-</div>
+              </div>
 <!-- item 2 -->
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="headingTwo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-two">
-                      When?
+                      When do you practice?
                     </button>
                   </h2>
                   <div id="question-two" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#questions">
@@ -107,7 +145,6 @@
                       <strong>Practice Times:</strong>
                       <br> Sunday: 10AM-12PM
                       <br> Tuesday: 6PM-8PM
-
                     </div>
                   </div>
                 </div>
@@ -132,14 +169,165 @@
                     </div>
                   </div>
                 </div>
+<!-- item 4 -->
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="heading4">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-4">
+                      How much is it to practice?
+                    </button>
+                  </h2>
+                  <div id="question-4" class="accordion-collapse collapse" aria-labelledby="heading4" data-bs-parent="#questions">
+                    <div class="accordion-body">
+                      <strong>Cost:</strong>
+                      <br> First 2 practices are FREE!
+                      <br>
+                      <br> Individual: $25
+                      <br>
+                      <br> Family:
+
+                      <table class="border border-dark" style="width:100%">
+                        <tr>
+                          <td>2nd: $15</td>
+                          <td>3rd: $10</td>
+                          <td>Max: $50</td>
+                        </tr>
+                      </table>
+                    </div>
+                  </div>
+                </div>
+<!-- item 5 -->
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="heading5">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-5">
+                      How do We register for a USRSS membership to compete
+                    </button>
+                  </h2>
+                  <div id="question-5" class="accordion-collapse collapse" aria-labelledby="heading5" data-bs-parent="#questions">
+                    <div class="accordion-body">
+                      <strong>How to Register?</strong>
+                      <br><a href="https://www.teamusa.org/usa-roller-sports" target="_blank">USA ROLLER SPORTS</a>
+                      <br>Click "Become a Member"
+                    </div>
+                  </div>
+                </div>
+<!-- item 6 -->
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="heading6">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-6">
+                      What is USRSS?
+                    </button>
+                  </h2>
+                  <div id="question-6" class="accordion-collapse collapse" aria-labelledby="heading6" data-bs-parent="#questions">
+                    <div class="accordion-body">
+                      <strong>Informative Facebook Group:</strong>
+                      <br>
+                      <br> <a href="https://www.facebook.com/Midwest-Point-Series-169879193571550/about/?ref=page_internal" target="_blank">Midwest Point Series Page</a>
+                      <br>
+                      <br> Check "See More" under the More info tab at bottom of page.
+                    </div>
+                  </div>
+                </div>
+<!-- item 7 -->
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="heading7">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-7">
+                      How often are competitions?
+                    </button>
+                  </h2>
+                  <div id="question-7" class="accordion-collapse collapse" aria-labelledby="heading7" data-bs-parent="#questions">
+                    <div class="accordion-body">
+                      <strong>Meet Info:</strong>
+                      <br> -Generally our team travels to a few MWPS meets over the year averaging about (6) in a year
+                      <br> -American Championships (optional)
+                      <br> -Invitationals (optional)
+                    </div>
+                  </div>
+                </div>
+<!-- item 8 -->
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="heading8">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-8">
+                      How fast can the fastest go?
+                    </button>
+                  </h2>
+                  <div id="question-8" class="accordion-collapse collapse" aria-labelledby="heading8" data-bs-parent="#questions">
+                    <div class="accordion-body">
+                      <strong>Speeds?</strong>
+                      <br> World champions hit upwards of 24-25mph indoors.
+                      <br> upto 35mph outdoors on flat ground.
+                      <br> <a href="https://www.youtube.com/watch?v=0chPLmznVG4&t=115s" target="_blank">Joey Mantia hitting 34MPH</a>
+                    </div>
+                  </div>
+                </div>
+<!-- item 9 -->
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="heading9">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-9">
+                      Do you have Outdoor Practices?
+                    </button>
+                  </h2>
+                  <div id="question-9" class="accordion-collapse collapse" aria-labelledby="heading9" data-bs-parent="#questions">
+                    <div class="accordion-body">
+                      <strong>Weather permitting</strong>
+                      <br> We try to practice outdoors on Thursdays
+                      <br> We decide the Tuesday before at indoor practice 
+                    </div>
+                  </div>
+                </div>
+<!-- item 10 -->
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="heading10">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-10">
+                      How big are those wheels?
+                    </button>
+                  </h2>
+                  <div id="question-10" class="accordion-collapse collapse" aria-labelledby="heading10" data-bs-parent="#questions">
+                    <div class="accordion-body">
+                      <strong>Wheel Sizes:</strong>
+                      <br>Wheels can range from 80mm-125mm
+                      <br>Competitively we see 100mm-110mm-125mm used the most
+                    </div>
+                  </div>
+                </div>
+<!-- item 11 -->
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-four">
+                      Why such big wheels?
+                    </button>
+                  </h2>
+                  <div id="question-four" class="accordion-collapse collapse" aria-labelledby="headingfour" data-bs-parent="#questions">
+                    <div class="accordion-body">
+                      <strong>Why:</strong>
+                      <br> Reducing the amount of surface area on the ground at one time reduces friction, allowing skaters to feel less and roll more and glide there pushes longer.
+                      <br> Previously over the past 20 years wheels have increased in size from 76mm all the way to some 125mm and to even 130mm. 80mm setups used to run 5-wheels while
+                      <br> 100mm&110mm run 4-wheel setups and 125mm-up run 3-wheel setups. Generally the further the distance the bigger the wheel, as its been demonstrated to help endurance.
+                    </div>
+                  </div>
+                </div>
+<!-- questions
+Whos the best?
+Are'nt there Ice skaters that came from this sport?
+How long does it take to get good?
+How long are those frames?-->
+<!-- end container --> 
               </div>
-          </div>
-      </section>
-
-<!-- end container -->
+    </section>
 
 
 
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+      <!-- Footer -->
+
+      <footer class="fixed-bottom p-5 bg-warning text-white text-center position-relative">
+        <div class="container">
+            <p class="lead text-dark">Copyright &copy; 2022 PhantomRacing</p>
+            <!-- <a href="" class="position-absolute bottom-0 end-0 p-5">
+                <i class="bi bi-arrow-up-circle h1"></i>
+            </a> -->
+        </div>
+      </footer>
+
+      
 </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </html>
