--- a/faq.html
+++ b/faq.html
@@ -151,13 +151,13 @@
 <!-- item 3 -->
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="headingThree">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#quiestion-three">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-three">
                       What Should I Bring?
                     </button>
                   </h2>
-                  <div id="quiestion-three" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#questions">
+                  <div id="question-three" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#questions">
                     <div class="accordion-body">
-                      <strong>Equipmet needed:</strong> 
+                      <strong>Equipment needed:</strong> 
                       <br> Helmet (we can provide)
                       <br> Skates (we can provide)
                       <br> Water (we can provide)
