--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
           <div class="row align-items-center justify-content-between">
             <div class="col-md">
               <div class="ratio ratio-16x9">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/1mPrRZn1MkM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="800" height="480" src="https://www.youtube.com/embed/1mPrRZn1MkM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
             </div>
-            <div class="col-sm p-5">
+            <div class="col-md p-5">
               <h2>Meet Us</h2>
               <p class="lead">
                 Come hang out, wether it be to train, hangout or meet new people.
@@ -258,13 +258,13 @@
                 <!-- item 3 -->
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="headingThree">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#quiestion-three">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-three">
                       What Should I Bring?
                     </button>
                   </h2>
-                  <div id="quiestion-three" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#questions">
+                  <div id="question-three" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#questions">
                     <div class="accordion-body">
-                      <strong>Equipmet needed:</strong> 
+                      <strong>Equipment needed:</strong> 
                       <br> Helmet (we can provide)
                       <br> Skates (we can provide)
                       <br> Water (we can provide)
