--- a/fundamentals.html
+++ b/fundamentals.html
@@ -130,7 +130,9 @@
                 <i class="bi bi-chevron-right"></i>Home
               </a></div>
               <div class="col-md">
-                <iframe width="800" height="480" src="https://www.youtube.com/embed/nrP--LnzRgs?start=28" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div class="ratio ratio-16x9">
+                  <iframe width="800" height="480" src="https://www.youtube.com/embed/nrP--LnzRgs?start=28" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
               </div>
             
           </div> 
