update form/contact us

--- a/index.html
+++ b/index.html
@@ -295,34 +295,31 @@
           </div>
       </section>
 
-      <!-- Contact/Map  -->
-
-    <!-- Contact & Map -->
-    <!-- <section class="p-5">
-        <div class="container">
-          <div class="row g-4">
-            <div class="col-md">
-              <h2 class="text-center mb-4">Contact Info</h2>
-              <ul class="list-group list-group-flush lead">
-                <li class="list-group-item">
-                  <span class="fw-bold">Main Location:</span> 5001 Nebraska Ave, Huber Heights, OH 45424
-                </li>
-                <li class="list-group-item">
-                  <span class="fw-bold">Enrollment Phone:</span> (937) 610-2827
-                </li>
-                <li class="list-group-item">
-                  <span class="fw-bold">Enrollment Email:</span> phantomspeedskating@gmail.com
-                </li>
-                <li class="list-group-item">
-                  <span class="fw-bold">Facebook Group:</span>
-                  <a href="https://www.facebook.com/groups/phantomracing" target="_blank">facebook groups phantomracing</a>
-                </li>
-              </ul>
-            </div>
-            </div>
+    <!-- Contact Us -->
+    <!-- <section class="p-4">
+      <div class="container">
+        <div class="row g-3">
+          <div class="col-md">
+            <h2 class="text-center mb-2">Contact Info</h2>
+            <ul class="list-group list-group-flush lead">
+              <li class="list-group-item">
+                <span class="fw-bold">Main Location:</span> 5001 Nebraska Ave, Huber Heights, OH 45424
+              </li>
+              <li class="list-group-item">
+                <span class="fw-bold">Enrollment Phone:</span> (937) 610-2827
+              </li>
+              <li class="list-group-item">
+                <span class="fw-bold">Enrollment Email:</span> phantomspeedskating@gmail.com
+              </li>
+              <li class="list-group-item">
+                <span class="fw-bold">Facebook Group:</span>
+                <a href="https://www.facebook.com/groups/phantomracing" target="_blank">facebook.com/groups/phantomracing</a>
+              </li>
+            </ul>
           </div>
         </div>
-      </section> -->
+      </div>
+    </section> -->
 
       <!-- Footer -->
 
@@ -344,8 +341,34 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
+<!-- contact us in form -->          
+          <section class="p-4">
+            <div class="container">
+              <div class="row g-3">
+                <div class="col-md">
+                  <h2 class="text-center mb-2">Contact Info</h2>
+                  <ul class="list-group list-group-flush lead">
+                    <li class="list-group-item">
+                      <span class="fw-bold">Main Location:</span> 5001 Nebraska Ave, Huber Heights, OH 45424
+                    </li>
+                    <li class="list-group-item">
+                      <span class="fw-bold">Enrollment Phone:</span> (937) 610-2827
+                    </li>
+                    <li class="list-group-item">
+                      <span class="fw-bold">Enrollment Email:</span> phantomspeedskating@gmail.com
+                    </li>
+                    <li class="list-group-item">
+                      <span class="fw-bold">Facebook Group:</span>
+                      <a href="https://www.facebook.com/groups/phantomracing" target="_blank">facebook.com/groups/phantomracing</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </section>
+
           <!-- Form -->
-          <p class="lead">Fill out this form and we will get back to you</p>
+          <!-- <p class="lead">Fill out this form and we will get back to you</p>
           <form action="https://formspree.io/f/xbjwgkkr" name="contactInfo"
           method="POST">
               <div class="mb-3">
@@ -367,7 +390,7 @@
               <div class="form-floating">
                 <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
                 <label for="floatingTextarea2">Comments</label>
-              </div>
+              </div> -->
 
               <!-- <div class="mb-3 p-5">
                 <label>
@@ -377,8 +400,8 @@
               </div> -->
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                  <button type="submit" class="btn btn-warning">Submit</button>
-                  <p>We'll email you back shortly!</p>
+                  <!-- <button type="submit" class="btn btn-warning">Submit</button>
+                  <p>We'll email you back shortly!</p> -->
                 </div>  
           </form>
         </div>
